--- a/public/default/css/app.css
+++ b/public/default/css/app.css
@@ -73,6 +73,16 @@ html {background-color: #dfe2f1}
 .content h2 {font-size: 1rem}
 .others a{color: #6b7394; text-decoration: none}
 .emoji {height: 1.0em}
+label[for=show-content] > span, label[for=hide-content] > span {
+    cursor: pointer;
+    background-color: #dfe2f1;
+    border-radius: .2em;
+    padding: .05em;
+}
+input#show-content, input#hide-content {display: none}
+div#content {display: none}
+input#show-content:checked ~ div#content{display: block}
+
 .blog-header a{
     color: #a9afca;
     text-decoration: none
