--- a/public/default/css/app.css
+++ b/public/default/css/app.css
@@ -50,7 +50,7 @@ p {margin: 0;line-height: 1.3rem}
 .avatar-min img {width: 1.2em;height: 1.2em;padding: 0;margin: 0;border-radius: .1em}
 .avatar-none {width:2.6em;height: 2.6em;background-color: lightgray;border-radius: .1em;border:1px solid lightgray}
 .avatar img {width: 2.6em;height: 2.6em;padding: 0;margin: 0}
-.attachment {max-width: 5em;}
+.attachment {width: 100%;object-fit: cover;height: 10em}
 .bold {font-weight: bold}
 .tag {background: #ededed; color: #333; padding: .1em .5em;text-decoration: none;word-break: keep-all; border-radius: .1em}
 .tag-min {background: #f0f0f0; color: #333; text-decoration: none;word-break: keep-all}
@@ -70,6 +70,12 @@ html {background-color: #dfe2f1}
 .content p {margin: .6em 0; word-break: break-all;}
 .content br {display: block; margin: .5em 0;content: " "}
 .content img {max-width: 100%;font-weight: normal}
+.content img:not(.emoji) {
+    width: 100%;
+    max-height: 20em;
+    object-fit: contain;
+    background-color: #e9e9e9;
+}
 .content h2 {font-size: 1rem}
 .others a{color: #6b7394; text-decoration: none}
 .emoji {height: 1.0em}
