Add default color to link

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -48,6 +48,9 @@ html, body{
 html {
     background-color: var(--bg-page);
 }
+a {
+    color: var(--fg-link);
+}
 h1 {
     font-size: 1.2rem;
     display: inline-block;
