--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -13,7 +13,9 @@
     --bg-content-image: #e9e9e9;
     --bg-button: #ffffff;
     --bg-navigator: var(--bg-container);
-    --bg-avatar:lightgray;
+    --bg-avatar: lightgray;
+    --bg-progress: lightgray;
+    --bg-progress-selected: green;
 
     --fg-page: #293256;
     --fg-link: var(--fg-page);
@@ -33,6 +35,8 @@
     --fg-navigator-link: var(--fg-content-header-date);
     --fg-error: red;
     --fg-message: green;
+    --fg-choice: var(--fg-content);
+    --fg-poll-details: var(--fg-disabled);
 
     --bd-avatar: lightgray;
     --bd-button: #333333;
@@ -216,6 +220,31 @@ textarea {
 }
 .content h2 {
     font-size: 1rem;
+}
+
+.poll ul {
+    padding: 0;
+}
+.poll .choice, .poll .progress {
+    color: var(--fg-choice);
+    margin: .3em 0;
+    list-style: none;
+}
+.poll .choice {
+    color: var(--fg-choice);
+    margin: .3em 0 0 0;
+    list-style: none;
+}
+.poll .progress {
+    height: 5px;
+    background-color: var(--bg-progress);
+    border-radius: .3em;
+}
+.poll .progress.selected {
+    background-color: var(--bg-progress-selected);
+}
+.poll .details {
+    color: var(--fg-poll-details);
 }
 .content-others .toggled {
     color: var(--fg-toggled);
