--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -66,7 +66,7 @@ p {
     margin: 0;
     line-height: 1.3rem
 }
-button {
+.btn, button {
     background-color: var(--bg-button);
     color: var(--fg-button);
     border:1px solid var(--bd-button);
